--- a/assets/style/styleSheet.css
+++ b/assets/style/styleSheet.css
@@ -1,19 +1,31 @@
+
+
 /* ------ Typography -------*/
 body {
   .libre-baskerville-regular {
-    font-family: "Libre Baskerville", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .libre-baskerville-bold {
-    font-family: "Libre Baskerville", serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .libre-baskerville-regular-italic {
-    font-family: "Libre Baskerville", serif;
-    font-weight: 400;
-    font-style: italic;
-  }
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.libre-baskerville-bold {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.libre-baskerville-regular-italic {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+
+  /* ------ Fluid Images ------- */
+img {
+  border-radius: 50%;
+  max-width: 75%;
+  margin-left: auto;
+  margin-right:auto; /*Makes sure image never gets larger than the available space*/
+}
+}
