--- a/sophie/assets/style/sophieWebsite.css
+++ b/sophie/assets/style/sophieWebsite.css
@@ -9,7 +9,7 @@ html {
 
 body{
   text-align: center;
-  background-image: url("assets");
+  background-image: url("");
   font-family: "Playfair Display", serif;
   font-size: 16px;
   line-height: 1.5em;
