--- a/web-1/assets/style/screen.css
+++ b/web-1/assets/style/screen.css
@@ -89,7 +89,11 @@ body {
 	margin-right: 20px;
 	margin-left: 20px;
 }
-
+.alert{
+	background: pink;
+	padding:5px;
+	border:1px solid #c0c0c0;
+}
 #content img {
 	float: right;
 	border: 1px solid #c0c0c0;
