--- a/assets/style/styleSheet.css
+++ b/assets/style/styleSheet.css
@@ -41,20 +41,21 @@ img {
 	margin-right: auto;
 	margin-left: auto;
 	text-align: center;
-	background-color: #9c9c9c;
+	background-color: lightgray;
 	margin-top: 10px;
 	border: 2px solid #1a1919;
 }
 
+/* set background image for header */
 h1 {
   color: whitesmoke;
   text-shadow: 3px 3px #000000;
   font-size: 50px;
   background-image: url('../images/virtualData.jpg');
-  background-size: cover;        /* Makes image cover the entire h1 */
-  background-position: center;   /* Centers the image */
-  background-repeat: no-repeat;  /* Prevents image from repeating */
-  padding: 120px;                 /* Adds space around text */  
+  background-size: cover;
+  background-position: center;  
+  background-repeat: no-repeat;  
+  padding: 120px;  /* Adds space around text */  
 }
 
 h2 {
