--- a/spaceX/assets/css/style.css
+++ b/spaceX/assets/css/style.css
@@ -260,6 +260,10 @@ select {
 
 #articles .post img {
   border-radius: 8px;
+  width: 100%;
+  height: 200px;  
+  object-fit: cover;  
+  object-position: center;  
 }
 
 #articles ul {
