--- a/currencyValueHistory/assets/css/stylesheet.css
+++ b/currencyValueHistory/assets/css/stylesheet.css
@@ -34,6 +34,8 @@ button, input[type="button"] {
             font-size: 18px;
             padding: 8px 16px;
             margin: 10px;
+            background-color: hsl(194, 87%, 56%);
+            border: none;
         }
 
         select, input[type="date"] {
