--- a/web-1/assets/style/screen.css
+++ b/web-1/assets/style/screen.css
@@ -22,6 +22,7 @@ body {
 	background-image:url("../images/webpage-background.jpg");
 	background-color: #FFF;
 	margin-top: 20px;
+	margin-bottom: 20px;
 	border: 1px solid #CCC;
 	color: #FFF;
 }
