--- a/arkansasFilmDatabaseProject/assets/style/styleSheet.css
+++ b/arkansasFilmDatabaseProject/assets/style/styleSheet.css
@@ -15,7 +15,7 @@ html {
 /*background photo specs*/
 body {
   text-align: center;
-  background-image: url("../images/filmBackground.jpg");
+  /*background-image: url("../images/filmBackground.jpg");*/
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -55,12 +55,12 @@ h3 {
 
 /* Dark overlay box */
 .header-overlay {
-  background: rgba(0, 0, 0, 0.55);  /* subtle dark overlay */
+  background: rgba(0, 0, 0, 0.55);  
   padding: 30px 40px 40px;
   margin-top: 20px;
   border-radius: 16px;
   box-shadow: 0 8px 24px rgba(0,0,0,0.5);
-}
+} 
 
 /* Button container */
 .nav-buttons {
